NEXT-173 - First implementation of a text editor component

--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -11,12 +11,10 @@
         {% endblock %}
 
         {% block sw_product_basic_form_description_field %}
-            <sw-field type="textarea"
-                      :label="$tc('sw-product.basicForm.labelDescription')"
-                      :placeholder="$tc('sw-product.basicForm.placeholderDescription')"
-                      name="descriptionLong"
-                      v-model="product.descriptionLong">
-            </sw-field>
+            <sw-text-editor :label="$tc('sw-product.basicForm.labelDescription')"
+                            :placeholder="$tc('sw-product.basicForm.placeholderDescription')"
+                            v-model="product.descriptionLong">
+            </sw-text-editor>
         {% endblock %}
 
         <sw-container grid="1fr 1fr" gap="0px 30px">
