--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -29,6 +29,7 @@
         font-size: 14px;
         line-height: 20px;
         transition: all ease-in-out .2s;
+        min-height: 45px;
 
         &.is--active {
             border-color: @sw-multi-select-color-border-focus;
@@ -63,6 +64,10 @@
         padding: 4px 40px 4px 12px;
         flex-shrink: 0;
         cursor: default;
+
+        &:hover {
+            background: darken(@color-light-gray, 8%);
+        }
     }
 
     .value--dismiss {
@@ -127,28 +132,28 @@
         border-top: 0 none;
         border-bottom-right-radius: 3px;
         border-bottom-left-radius: 3px;
-        max-height: 300px;
+        max-height: 315px;
+    }
 
-        .sw-multi-select__results-list {
-            display: block;
-            list-style: none;
-            border-top: 0 none;
+    .sw-multi-select__results-list {
+        display: block;
+        list-style: none;
+        border-top: 0 none;
+    }
+
+    .sw-multi-select__results-entry {
+        border-bottom: 1px solid @color-steam-cloud;
+        padding: 12px 15px;
+        cursor: pointer;
+
+        &:last-child {
+            border-bottom: 0 none;
         }
 
-        .list--entry {
-            border-bottom: 1px solid @color-steam-cloud;
-            padding: 10px 15px;
-            cursor: pointer;
-
-            &:last-child {
-                border-bottom: 0 none;
-            }
-
-            &:hover,
-            &.is--selected {
-                background: lighten(@color-shopware-blue, 40%);
-                color: @color-shopware-blue;
-            }
+        &:hover,
+        &.is--selected {
+            background: lighten(@color-shopware-blue, 40%);
+            color: @color-shopware-blue;
         }
     }
 
