NEXT-395 - Entities are generating assocations automatically

--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
@@ -22,7 +22,7 @@
                     <li v-for="entry in filteredEntries"
                         class="list--entry"
                         :data-id="entry.id"
-                        @click="onSelectEntry(entry.id)">
+                        @click="onSelectEntry(entry)">
                         {{ entry.name }}
                     </li>
                 </ul>
