--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -158,7 +158,7 @@
                                                         {% endblock %}
 
                                                         {% block sw_customer_list_grid_columns_actions_delete %}
-                                                            <sw-context-menu-item :disabled="true" variant="danger">
+                                                            <sw-context-menu-item variant="danger" :disabled="true">
                                                                 {{ $tc('sw-customer.list.contextMenuDelete') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
