--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -51,7 +51,7 @@
                 {% endblock %}
 
                 {% block sw_order_detail_content_view %}
-                    <router-view :order="order" :lineItems="lineItems" :deliveries="deliveries"></router-view>
+                    <router-view :order="order"></router-view>
                 {% endblock %}
 
             </sw-card-view>
