--- a/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
@@ -19,7 +19,8 @@
                                  :label="$tc('sw-product.categoryForm.labelCategory')"
                                  :placeholder="$tc('sw-product.categoryForm.placeholderCategory')"
                                  :serviceProvider="categoryService"
-                                 :values="productCategoryIds"
+                                 :values="product.categories"
+                                 @input="onInputCategories"
                                  v-model="product.categories">
                 </sw-multi-select>
             {% endblock %}
