--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -63,9 +63,8 @@
 
                 {% block sw_order_detail_base_line_items_card_rows %}
                     <sw-container slot="grid" type="row">
-
                         {% block sw_order_detail_base_line_items_grid %}
-                            <sw-order-line-items-grid :orderLineItems="lineItems" :order="order"></sw-order-line-items-grid>
+                            <sw-order-line-items-grid :orderLineItems="order.lineItems" :order="order"></sw-order-line-items-grid>
                         {% endblock %}
 
                         {% block sw_order_detail_base_line_items_row_summary %}
