--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
@@ -6,30 +6,35 @@
         {% endblock %}
 
         {% block sw_multi_select_inner %}
-            <div class="sw-multi-select__inner" ref="swMultiSelectInner" :class="{ 'is--active' : isExpanded }">
+            <div class="sw-multi-select__inner" ref="swMultiSelectInner" :class="{ 'is--expanded': isExpanded }">
 
-                {% block sw_multi_select_data %}
-                    <input type="hidden" :value="stringifyValues">
-                {% endblock %}
+                {% block sw_multi_select_selections %}
+                    <transition-group name="appear" tag="ul" class="sw-multi-select__selections" mode="out-in">
+                        {% block sw_multi_select_selection_item %}
+                            <li class="sw-multi-select__selection-item"
+                                v-for="selection in displaySelections"
+                                :key="selection.id"
+                                :data-id="selection.id">
+                                {% block sw_multi_select_selection_text %}
+                                    <span class="sw-multi-select__selection-text">
+                                        {{ selection.name }}
+                                    </span>
+                                {% endblock %}
 
-                {% block sw_multi_select_list %}
-                    <transition-group name="appear" tag="ul" class="sw-multi-select__list" mode="out-in">
-                        {% block sw_multi_select_list_item %}
-                            <li class="sw-multi-select__list-item"
-                                v-for="entry in displayValues"
-                                :key="entry.id"
-                                :data-id="entry.id">
-                                <span class="value--display">{{ entry.name }}</span>
-                                <button class="value--dismiss"
-                                        title="Delete"
-                                        @click.prevent="onDismissEntry(entry.id)">
-                                    <sw-icon name="small-default-x-line-medium"></sw-icon>
-                                </button>
+                                {% block sw_multi_select_selection_dismiss %}
+                                    <button class="sw-multi-select__selection-dismiss"
+                                            title="Delete"
+                                            @click.prevent="onDismissSelection(selection.id)">
+                                        {% block sw_multi_select_selection_dismiss_icon %}
+                                            <sw-icon name="small-default-x-line-medium"></sw-icon>
+                                        {% endblock %}
+                                    </button>
+                                {% endblock %}
                             </li>
                         {% endblock %}
 
                         {% block sw_multi_select_list_item_input %}
-                            <li class="sw-multi-select__list-item-input" key="listInput">
+                            <li class="sw-multi-select__selection-item-input" key="listInput">
                                 {% block sw_multi_select_input %}
                                     <input ref="swMultiSelectInput"
                                            class="sw-multi-select__input"
@@ -53,24 +58,30 @@
                             <div class="sw-multi-select__results" v-if="isExpanded">
 
                                 {% block sw_multi_select_results_list %}
-                                    <ul v-if="filteredEntries.length > 0" class="sw-multi-select__results-list">
-                                        {% block sw_multi_select_results_item %}
-                                            <li v-for="(entry, index) in filteredEntries"
-                                                class="sw-multi-select__results-entry"
-                                                :class="{ 'is--selected' : (index === activePosition) }"
-                                                :data-id="entry.id"
-                                                @click="onSelectEntry(entry.id)">
-                                                {{ entry.name }}
+                                    <ul v-if="filteredResults.length > 0" class="sw-multi-select__results-list">
+                                        {% block sw_multi_select_result_item %}
+                                            <li v-for="(result, index) in filteredResults"
+                                                class="sw-multi-select__result-item"
+                                                :class="{ 'is--selected': (index === activeResultPosition) }"
+                                                :data-id="result.id"
+                                                @mouseover="setActiveResultPosition(index)"
+                                                @click="onSelectEntry(result)">
+                                                {% block sw_multi_select_result_item_text %}
+                                                    {{ result.name }}
+                                                {% endblock %}
                                             </li>
                                         {% endblock %}
                                     </ul>
                                 {% endblock %}
 
                                 {% block sw_multi_select_results_empty %}
-                                    <div class="sw-multi-select__results-empty" v-else>
-                                        {% block sw_multi_select_results_empty_text %}
+                                    <div class="sw-multi-select__results-empty-message" v-else>
+                                        {% block sw_multi_select_results_empty_icon %}
                                             <sw-icon name="default-action-search" size="20px"></sw-icon>
-                                            No Results found for "{{ currentSearchTerm }}"
+                                        {% endblock %}
+
+                                        {% block sw_multi_select_results_empty_text %}
+                                            {{ $tc('global.sw-multi-select.messageNoResults', searchTerm, { term: searchTerm }) }}
                                         {% endblock %}
                                     </div>
                                 {% endblock %}
@@ -79,6 +90,7 @@
                         {% endblock %}
                     </transition>
                 {% endblock %}
+
             </div>
         {% endblock %}
 
